# coriander

./: Cargo.toml
cil/: Cargo.toml
cil/src/: lib.rs  rw.rs
core/: Cargo.toml
parser/: Cargo.toml
parser/src/: lib.rs  pe.rs  utils.rs
parser/src/metadata/: mod.rs  signatures.rs  tables.rs  token.rs
