[package]
name = "coriander-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
binrw = "0.13.1"
bitflags = "2.4.1"
deref-derive = "0.1.0"
ref-cast = "1.0.20"
thiserror = "1.0.57"
ux = "0.1.5"
